--- a/src/main/resources/assets/rewired/lang/en_us.lang
+++ b/src/main/resources/assets/rewired/lang/en_us.lang
@@ -23,7 +23,7 @@ item.rewired.skin.camo.name=Thermopitic Camouflage
 cyberware.tooltip.skin.0=Out of Sight...
 
 item.rewired.skin.aegis.name=AEGIS Defense Matrix
-cyberware.tooltip.skin.1=Thick Skinned
+cyberware.tooltip.skin.1=Projects a carbon shell around the user protecting against minor attacks
 
 item.rewired.foot.rail_riders.name=Rail Riders
 cyberware.tooltip.foot.0=Keeping a foot ahead on the Tracks of life
