--- a/src/main/resources/assets/rewired/lang/en_us.lang
+++ b/src/main/resources/assets/rewired/lang/en_us.lang
@@ -1,9 +1,13 @@
 itemGroup.rewired=ReWIRED
 
+rewired.gui.era=Endermal Remote Access Pouch
+
 item.rewired.cranium.ecd.name=Ender-Convergence Device
 cyberware.tooltip.cranium.0=Based on early teleportation attemps, the ECD teleports items to the user
 cyberware.tooltip.cranium.0.power_consumption=Uses%1$d power per ItemStack teleported
 
+item.rewired.cranium.mmi.name=Neural Interlink
+cyberware.tooltip.cranium.1=Required for Neural Interlink Equipment
 
 item.rewired.hand.plasteel_fist.name=Plasteel Fist
 cyberware.tooltip.hand.0=Hands mine at Iron Level
@@ -24,6 +28,9 @@ cyberware.tooltip.skin.0=Out of Sight...
 
 item.rewired.skin.aegis.name=AEGIS Defense Matrix
 cyberware.tooltip.skin.1=Projects a carbon shell around the user protecting against minor attacks
+
+item.rewired.skin.era.name=Endermal Remote Storage Pouch
+cyberware.tooltip.skin.2=Provides access to the Player's Ender Chest
 
 item.rewired.foot.rail_riders.name=Rail Riders
 cyberware.tooltip.foot.0=Keeping a foot ahead on the Tracks of life
@@ -49,6 +56,11 @@ item.rewired.shield.holo.name=Holographic Riot Shield
 
 item.rewired.armor.visor.name=AR Visor
 
+item.rewired.exosuit.head.name=EX-0 Head Module
+item.rewired.exosuit.chest.name=EX-0 Chest Module
+item.rewired.exosuit.legs.name=EX-0 Leg Module
+item.rewired.exosuit.feet.name=EX-0 Foot Module
+
 item.rewired.baton.polymer.name=Polymer Riot Baton
 item.rewired.baton.carbon.name=Carbon Riot Baton
 item.rewired.baton.plasteel.name=Plasteel Riot Baton
@@ -62,3 +74,5 @@ entity.Villager.runner=Runner
 entity.cyberskeleton.name=Cyberskeleton
 
 attribute.name.rewired.ranged_damage=Projectile Damage
+
+tooptip.neuralinterlink.desc=Neural Interlink Item
